--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "homepage": "https://github.com/the-cute-panda/PandaCrate/README.md",
-  "repository": "github:Keterr/Tupperbox",
+  "repository": "github:the-cute-panda/pandacrate",
   "bugs": "https://github.com/the-cute-panda/PandaCrate/issues",
   "author": "the-cute-panda",
   "license": "BSD-3-Clause",
