--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DISCORD_TOKEN=MTk4NjIyNDgzNDcxOTI1MjQ4.Cl2FMQ.ZnCjm1XVW7vRze4b7Cq4se7kKWs
+DISCORD_TOKEN=
 DISCORD_OWNERID=783806322264244244
 
 BOT_INVITE=721184843312136235
