--- a/package.json
+++ b/package.json
@@ -1,32 +1,54 @@
 {
-  "name": "silver-memory",
-  "version": "1.0.1",
-  "description": "pandacrate a bot for discord message proxying",
-  "main": "pc.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "homepage": "https://github.com/bobbys-development-team/silver-memory/README.md",
-  "repository": "github:bobbys-development-team/silver-memory",
-  "bugs": "https://github.com/bobbys-development-team/silver-memory/issues",
-  "author": "bobbys-development-team",
-  "license": "BSD-3-Clause",
-  "dependencies": {
-    "@sentry/node": "^6.5.1",
-    "bufferutil": "^4.0.1",
-    "dotenv": "^10.0.0",
-    "eris": "github:keterr/eris#dev",
-    "eris-sharder": "^1.10.0",
-    "got": "^11.6.2",
-    "ioredis": "^4.16.0",
-    "pako": "^2.0.2",
-    "pg": "^8.2.1",
-    "probe-image-size": "^7.2.0",
-    "sodium-native": "^3.2.0",
-    "string-length": "^4.0.1",
-    "valid-url": "^1.0.9",
-    "winston": "^3.2.1",
-    "zlib-sync": "^0.1.6"
-  }
+	"name": "silver-memory",
+	"description": "silver memory a bot for discord message proxying",
+	"homepage": "https://github.com/bobbys-development-team/silver-memory/README.md",
+	"eslintConfig": {
+		"env": {
+			"es6": true,
+			"node": true
+		},
+		"extends": "eslint:recommended",
+		"parserOptions": {
+			"sourceType": "module",
+			"ecmaVersion": 2020
+		},
+		"rules": {
+			"indent": [
+				"error",
+				"tab"
+			],
+			"quotes": [
+				"error",
+				"double"
+			],
+			"semi": [
+				"error",
+				"always"
+			],
+			"no-console": "off",
+			"no-unused-vars": "off",
+			"no-cond-assign": "off",
+			"no-case-declarations": "off",
+			"no-empty": "off"
+		}
+	},
+	"dependencies": {
+		"@sentry/node": "^5.7.1",
+		"bufferutil": "^4.0.1",
+		"dotenv": "^6.2.0",
+		"eris": "github:keterr/eris#dev",
+		"eris-sharder": "^1.10.0",
+		"got": "^9.6.0",
+		"ioredis": "^4.16.0",
+		"pako": "^1.0.10",
+		"pg": "^8.2.1",
+		"probe-image-size": "^3.2.0",
+		"string-length": "^2.0.0",
+		"valid-url": "^1.0.9",
+		"winston": "^3.2.1",
+		"zlib-sync": "^0.1.6"
+	},
+	"devDependencies": {
+		"eslint": "^7.10.0"
+	}
 }
-
