--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DISCORD_TOKEN=NzQyOTM2MjEyMjcyMDU0MzU0.YPDQSg.sOiJNCnKWETrnNkjArj-B5qyGJE
+DISCORD_TOKEN=
 DISCORD_OWNERID=783806322264244244
 
 BOT_INVITE=721184843312136235
